# Person-Detection-System-with-YOLOv3-and-Inter-Process-Communication

./: CMakeLists.txt  Makefile  README.md  detector  detector.cpp  requirements.txt  run.sh  setup.sh  visualizer.py
